--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 body {
     background-color:#f5f0e1;
     margin: 0;
-    position: relative;
+    min-height: 100%;
 }
 
 .main {
     display: flex;
+    position: relative;
     flex-direction: column;
 }
 
@@ -38,6 +39,8 @@ ul {
 }
 
 li {
+    display: flex;
+    justify-content: center;
     font-family: sans-serif;
     font-size: 26px;
     font-weight: bold;
@@ -46,6 +49,8 @@ li {
     border-right: 1px solid #ff6e40;
     padding-left: 40px;
     padding-right: 40px;
+    width: 150px;
+    height: auto;
 }
 
 h1 {
@@ -59,6 +64,7 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     gap: 50px;
+    margin-bottom: 0px;
 }
 
 #new-book {
@@ -79,31 +85,128 @@ h1 {
 }
 
 #new-book:hover {
-    color: #ffc13b;
-    background-color: #2f5577;
+    background-color: rgb(30, 61, 89, 0.9);
 }
 
-#overlay {
-    position: absolute;
+#new-book:active {
+    box-shadow: 0 5px rgba(0,0,0,0.5);
+    transform: translateY(4px);
+}
+
+.overlay {
+    position: fixed;
     display: none;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.0.5);
-    z-index: 2;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 10;
 }
 
 .book-form { 
-    display: none;  
+    display: none;
+    position: fixed;  
     flex-direction: column;   
     font-family: sans-serif;
     font-size: 18px;
     padding: 50px;
-    color: #ff6e40;
-    border-radius: 5px;
+    color: rgb(255, 110, 64);
+    border-radius: 10px;
     background-color: #1e3d59;
+    width: 400px;
+    height: auto;
+    z-index: 12;
 }
 
+label {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.submit-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.submit {
+    cursor: pointer;
+    background-color: rgb(245, 240, 225);
+    border: none;
+    margin-top: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 28px;
+    color: rgb(30, 61, 89);
+    border-radius: 5px;
+    width: 200px;
+}
+
+.submit:hover {
+    background-color: rgba(245, 240, 225, 0.8);
+}
+
+.submit:active {
+    box-shadow: 0 5px rgba(0,0,0,0.5);
+    transform: translateY(4px);
+}
+
+.text-input {
+    background-color: #f5f0e1;
+    color: #1e3d59;
+    font-family: sans-serif;
+    border-radius: 5px;
+    font-weight: 600;
+    height: 25px;
+}
+
+.form-header {
+    display: flex;
+    margin: 0px;
+    align-items: center;
+}
+
+#close-form {
+    margin-left: auto;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+#close-form:hover {
+    color: rgb(255, 110, 64, 0.5)
+}
+
+h3 {
+    font-size: 25px;
+    margin: 0px;
+}
+
+.delete-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    margin-top: 0px;
+}
+
+.delete-button {
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #f5f0e1;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    color: #1e3d59;
+}
+
+.delete-button:hover {
+    background-color: rgba(245, 240, 225, 0.8);
+}
+
+.delete-button:active {
+    box-shadow: 0 4px rgba(0,0,0,0.5);
+    transform: translateY(4px);
+}
